--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,6 +21,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: ghcr.io/adrianchifor/ctrlv.space:latest
           push: ${{ github.event_name != 'pull_request' }}
@@ -36,6 +37,7 @@ jobs:
         if: "startsWith(github.ref, 'refs/tags/v')"
         with:
           context: .
+          file: ./Dockerfile
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: ${{ steps.prep.outputs.tags }}
           push: ${{ github.event_name != 'pull_request' }}
