--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,13 +5,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Login to ghcr.io
         uses: docker/login-action@v1
@@ -28,6 +36,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: ghcr.io/adrianchifor/ctrlv.space:latest
           push: ${{ github.event_name != 'pull_request' }}
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Prepare tag
         id: prep
@@ -44,3 +53,4 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: ${{ steps.prep.outputs.tags }}
           push: ${{ github.event_name != 'pull_request' }}
+          cache-from: type=local,src=/tmp/.buildx-cache
